fix nav and content on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,11 @@
     /* padding-right: 2%; */
   }
 }
+@media (max-width: 575.99px) {
+  .page-top {
+    padding-top: 3.5rem;
+  }
+}
 
 a, a:hover {
   color: inherit;
